--- a/css/styles.css
+++ b/css/styles.css
@@ -143,7 +143,7 @@ gap: 40px;
     align-items: center;
   }
 
-.menu-item {
+.shadow {
     box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
