--- a/css/styles.css
+++ b/css/styles.css
@@ -192,9 +192,10 @@ gap: 40px;
     padding-bottom: 188px;
     background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/hero/people-office.jpg);
     background-repeat: no-repeat ;
-    background-position: center;
+    background-position: center center;
     background-size: cover;
     max-width: 1440px;
+    margin: 0 auto;
     
 } 
 
@@ -266,7 +267,7 @@ color: var(--text-color);
 }
 
 .flex-h-s {
-display: flex;
+display: flex
 margin-bottom: 8px;
 margin-left: 0;
 }
@@ -275,6 +276,18 @@ margin-left: 0;
     padding-top: 120px;
     padding-bottom: 120px;
 }
+.icon {
+    display: flex;
+    margin-bottom: 8px;
+    align-items: center;
+    justify-content: center;
+    height: 112px;
+    background-color: #f4f4fd;
+    border-radius: 4px;
+   
+
+}
+
 /*================== Section 3=============================== */
 
 .our-work-header {
