--- a/css/styles.css
+++ b/css/styles.css
@@ -410,6 +410,7 @@ gap: 24px;
  .icon-our-team-list-link {
     width: 40px;
     height: 40px;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08); 
     
    
     
@@ -427,6 +428,8 @@ gap: 24px;
  }
  .list-link-icon {
     fill: #f4f4fd;
+    width: 1px:
+    height: 16px;
     
  }
 
