--- a/css/styles.css
+++ b/css/styles.css
@@ -267,7 +267,7 @@ color: var(--text-color);
 }
 
 .flex-h-s {
-display: flex
+display: flex;
 margin-bottom: 8px;
 margin-left: 0;
 }
@@ -426,12 +426,31 @@ gap: 24px;
 
 
  }
- .list-link-icon {
+ .list-link-icon-four {
     fill: #f4f4fd;
-    width: 16px;
-    height: 16px;
+   
     
  }
+ /* =========== Section-5 ================ */
+.section-icono {
+    padding: 120px 0;
+
+}
+.section-icono-h {
+    font-size: 36px;
+    line-height: 1.1;
+    color: var(--accent-color);
+    margin-bottom: 72px;
+
+}
+.icono-five {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+    width: calc((100% - 120px) / 6);
+    height: 88px;
+
+}
 
 /*==============Footer================================= */
 
