--- a/css/styles.css
+++ b/css/styles.css
@@ -443,6 +443,7 @@ gap: 24px;
     line-height: 1.1;
     color: var(--accent-color);
     margin-bottom: 72px;
+    
 
 }
 .section-icono-list {
@@ -452,21 +453,28 @@ gap: 24px;
 .icono-five {
     width: calc((100% - 120px) / 6); 
     height: 88px;
-}
-.icono-five-list {
-    width: 100%;
-    height: 100%;
+    color: var(--icono-color);
     border: 1px solid #8e8f99;
     border-radius: 4px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    color: var(--icono-color)
+    width: 104px;
+    height: 56px;
+}
+.icono-five-list {
+    
+    
+   
 }
 .list-link-five {
     width: 104px;
     height: 56px;
     fill: currentColor;
+    width: 100%;
+    height: 100%;
+    border: 1px solid #8e8f99;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+   
 }
 
 /*==============Footer================================= */
