--- a/css/styles.css
+++ b/css/styles.css
@@ -531,7 +531,7 @@ color: var(--fond-btn-color);
     margin-bottom: 16px;
     
 }
-.logo-footer-ul {
+.cocial-list-icon {
     gap: 16px;
     width: 40px; 
     height: 40px; 
