--- a/css/styles.css
+++ b/css/styles.css
@@ -536,7 +536,7 @@ color: var(--fond-btn-color);
     width: 40px; 
     height: 40px; 
 }
-.icono-footer-dive {
+.footer-div {
     display: flex;
     align-items: baseline;
 
