--- a/css/styles.css
+++ b/css/styles.css
@@ -369,9 +369,7 @@ color: var(--text-color);
 display: flex;
 gap: 24px;
 }
-.flex-items-t {
-    flex-basis: calc((100% - 72px) / 4);
-}
+
 .flex-container-t .flex-items-t .group-h {
     display: flex;
     flex-wrap: wrap;
@@ -382,7 +380,9 @@ gap: 24px;
 }
 /* Section-4  radiuі задан в д/з */
 .flex-items-t {
+    flex-basis: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px;
+    box-shadow зі значенням 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .post-s-t {
@@ -412,12 +412,17 @@ gap: 24px;
  .icon-our-team-list-link {
     width: 40px;
     height: 40px;
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-    
-   
-    
+}
 
- }
+.cocial-list-icon:hover,
+.cocial-list-icon:focus
+ {background-color: #404bbf;
+}
+
+
+
+
+
  .cocial-list-icon {
     background-color: var(--logo-btn-color);
     border-radius: 50%;
@@ -429,7 +434,7 @@ gap: 24px;
 
  }
  .list-link-icon-four {
-    fill: #f4f4fd;
+    fill: var(--fond-btn-color)
     
    
     
@@ -531,12 +536,12 @@ color: var(--fond-btn-color);
     margin-bottom: 16px;
     
 }
-.cocial-list-icon {
+.logo-footer-ul {
     gap: 16px;
     width: 40px; 
     height: 40px; 
 }
-.footer-div {
+.cocial-list-icon {
     display: flex;
     align-items: baseline;
 
