--- a/css/styles.css
+++ b/css/styles.css
@@ -382,7 +382,7 @@ gap: 24px;
 .flex-items-t {
     flex-basis: calc((100% - 72px) / 4);
     border-radius: 0px 0px 4px 4px;
-    box-shadow зі значенням 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .post-s-t {
@@ -405,14 +405,12 @@ gap: 24px;
  .icon-our-team-list {
     display: flex;
     justify-content: center;
+    align-items: center;
     gap: 24px;
     padding: 32px 0;
     
  }
- .icon-our-team-list-link {
-    width: 40px;
-    height: 40px;
-}
+ 
 
 .cocial-list-icon:hover,
 .cocial-list-icon:focus
@@ -429,6 +427,7 @@ gap: 24px;
     display: flex;
     align-items: center;
     justify-content: center;
+    height: 100%;
     
 
 
