--- a/css/styles.css
+++ b/css/styles.css
@@ -448,35 +448,52 @@ gap: 24px;
     line-height: 1.1;
     color: var(--accent-color);
     margin-bottom: 72px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
     
 
 }
 .section-icono-list {
     display: flex;
     gap: 24px;
+    height: 88px;
 }
 .icono-five {
     width: calc((100% - 120px) / 6); 
     height: 88px;
-    color: var(--icono-color);
-    border: 1px solid #8e8f99;
-    border-radius: 4px;
-    width: 104px;
-    height: 56px;
+
+    
 }
 
-.list-link-five {
-    width: 104px;
-    height: 56px;
-    fill: currentColor;
+.icono-five .icono-five-list {
     width: 100%;
     height: 100%;
-    border: 1px solid #8e8f99;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+    
    
 }
+.icono-five-list {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: 1px solid #8e8f99;
+    border-radius: 4px;
+}
+.icono-five-list:hover,
+.icono-five-list:focus
+ {
+border-color:#40bbbf;
+color:#40bbbf ;
+}
+.list-link-five {
+fill: currentColor;
+}
+
+
+    
+   
+   
+    
 
 /*==============Footer================================= */
 
