--- a/css/styles.css
+++ b/css/styles.css
@@ -478,13 +478,14 @@ gap: 24px;
     align-items: center;
     border: 1px solid #8e8f99;
     border-radius: 4px;
+    color: #8e8f99;;
 }
 .icono-five-list:hover,
-.icono-five-list:focus
- {
+.icono-five-list:focus {
 border-color:#40bbbf;
-color:#40bbbf ;
+color: #40bbbf;
 }
+
 .list-link-five {
 fill: currentColor;
 }
