--- a/css/styles.css
+++ b/css/styles.css
@@ -565,7 +565,7 @@ color: var(--fond-btn-color);
 .cocial-list-icon {
 display: flex;
 justify-content: center;
-align-items: baseline;
+align-items: center;
 width: 40px;
 height: 40px;
 border-radius: 50%;
