--- a/css/styles.css
+++ b/css/styles.css
@@ -606,6 +606,7 @@ color: var(--text-color);
 background: var(--btn-color);
 color: var(--fond-color);
 border: 1px solid transparent;
+box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 2px 1px rgba(0, 0, 0, 0.08), 0px 2px 2px rgba(0, 0, 0, 0.12);
 }
 
 .portfolio-btn {
@@ -671,5 +672,8 @@ cursor: pointer;
     .post-heading {
     margin-bottom: 8px;
 }
-
+.link-a:hover,
+.link-a:focus {
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
 
