--- a/css/styles.css
+++ b/css/styles.css
@@ -424,6 +424,7 @@ gap: 24px;
     width: 40px;
     height: 40px;
     border-radius: 50%;
+    background-color: #4d5ae5;
 }
  .list-link-icon-four {
     fill: var(--btn-color)
