--- a/css/styles.css
+++ b/css/styles.css
@@ -411,7 +411,7 @@ gap: 24px;
 
  .cocial-list-icon:hover,
  .cocial-list-icon:focus {
-    background-color: var(--btn-color)
+    background-color: #404bbf
  }
 
 
