--- a/css/styles.css
+++ b/css/styles.css
@@ -411,7 +411,7 @@ gap: 24px;
 
  .cocial-list-icon:hover,
  .cocial-list-icon:focus {
-    background-color: #404bbf
+    background-color: #31d0aa
  }
 
 
@@ -424,7 +424,7 @@ gap: 24px;
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background-color: #4d5ae5;
+    background-color:  #404bbf
 }
  .list-link-icon-four {
     fill: var(--btn-color)
