--- a/css/styles.css
+++ b/css/styles.css
@@ -426,10 +426,10 @@ gap: 24px;
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background-color: var(--btn-color)
+    background-color: #404bbf;
 }
  .list-link-icon-four {
-    fill: #f4f4fd;
+    fill: #4d5ae5
 }
 
 
