--- a/css/styles.css
+++ b/css/styles.css
@@ -413,7 +413,7 @@ gap: 24px;
 
  .cocial-list-icon:hover,
  .cocial-list-icon:focus {
-    background-color:var(--icono-hover)
+    background-color: var(--btn-color) 
  }
 
 
@@ -426,11 +426,13 @@ gap: 24px;
     width: 40px;
     height: 40px;
     border-radius: 50%;
-    background-color: #404bbf;
+    background-color: var(--cocil-icono)
 }
  .list-link-icon-four {
-    fill: #4d5ae5
-}
+    fill: var(--fond-btn-color)
+ }
+
+
 
 
 
@@ -572,11 +574,11 @@ background-color: var(--cocil-icono)
 
 .cocial-list-icon-footer:hover,
 .cocial-list-icon-footer:focus {
-  background-color: var(--icono-hover)
+  background-color: #31d0aa;
 }
 
 .list-link-icon-footer {
-    fill: #f4f4fd;
+    fill:var(--fond-btn-color);
 }
 
 /*==================================== Portfolio========================== */
