--- a/css/styles.css
+++ b/css/styles.css
@@ -5,11 +5,11 @@
     --fond-color: #FFFFFF;
     --fond-btn-color: #F4F4FD;
     --btn-color: #404bbf;
-    --border-color:  #e7e9fc 
+    --border-color:  #e7e9fc; 
     --icono-color: #8e8f99;
     --icono-color: #8e8f99;
     --cocil-icono: #4d5ae5;
-    --icono-hover: #31d0aa
+    --icono-hover: #31d0aa;
     }
 
     h1,h2,h3,p {
@@ -360,6 +360,7 @@ font-size: 16px;
 line-height: 1.5;
 letter-spacing: 0.02em;
 color: var(--text-color);
+margin-bottom: 8px;
 }
 
 /* container-section-4 */
@@ -409,11 +410,14 @@ gap: 24px;
     justify-content: center;
     gap: 24px;
 }
- 
+ .icon-our-team-list-link {
+    width: 40px;
+    height: 40px;
+ }
 
  .cocial-list-icon:hover,
  .cocial-list-icon:focus {
-    background-color: var(--btn-color) 
+    background-color: var(--btn-color);
  }
 
 
@@ -423,13 +427,14 @@ gap: 24px;
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 40px;
-    height: 40px;
+    width: 100%;
+    height: 100%;
+    
     border-radius: 50%;
-    background-color: var(--cocil-icono)
+    background-color: var(--cocil-icono);
 }
  .list-link-icon-four {
-    fill: var(--fond-btn-color)
+    fill: var(--fond-btn-color);
  }
 
 
@@ -460,7 +465,7 @@ gap: 24px;
 }
 .icono-five {
     width: calc((100% - 120px) / 6); 
-    height: 88px;
+   
 
     
 }
@@ -558,15 +563,21 @@ color: var(--fond-btn-color);
 .logo-footer-ul {
     display: flex;
     gap: 16px;
-    
-
 }
+
+.list-footer {
+    width: 40px;
+    height: 40px;
+}
+
+
 .cocial-list-icon-footer {
 display: flex;
 justify-content: center;
 align-items: center;
-width: 40px;
-height: 40px;
+width: 100%;
+height: 100%;
+
 border-radius: 50%;
 background-color: var(--cocil-icono)
 
