--- a/css/styles.css
+++ b/css/styles.css
@@ -465,24 +465,27 @@ gap: 24px;
 }
 .icono-five {
     width: calc((100% - 120px) / 6); 
+    height: 88px;
+
    
 
     
 }
 
-.icono-five .icono-five-list {
-    width: 100%;
-    height: 100%;
+
     
    
-}
+
 .icono-five-list {
     display: flex;
     justify-content: center;
     align-items: center;
     border: 1px solid #8e8f99;
     border-radius: 4px;
-    color: #8e8f99;;
+    color: #8e8f99;
+    width: 100%;
+    height: 100%;
+
 }
 .icono-five-list:hover,
 .icono-five-list:focus {
